feat: delete all user sessions if provided refresh token has valid signature and expiration, but doesnt exist in DB
